--- a/TODO
+++ b/TODO
@@ -37,25 +37,28 @@ Content
     [m] Better Index page that actually points at the chapters & steps
     [m] Documentation page with links to sources
         [?] embedded iframe of user's local doc set
-    [m] Help page with pointers on what to do, where to go
-    [m] since jQuery, and images are copied into project tree, there should
+    [] Help page with pointers on what to do, where to go
+    [] since jQuery, and images are copied into project tree, there should
         be a copy of the license & attributions copied in there as well
+    [m] slide page formatting
+
 
 Source Editor
-    [+m] better editing indicator: adding padding resizes and looks bad
+    [-] better editing indicator: adding padding resizes and looks bad
+    [+m] run/edit rocker switch logic
+        [+m] basic logic
+        [+m] rocker image
+        [+m] run when edited logic (alert w/Save/Go Back)
+    [-] push top save/cancel buttons to top right of title
+        - removed them
+    [+m] keep rendering preview closed first time (revive preview arg)
+    [m] line number alignment on Chrome and FF
+    [m] handling multiple error messages on a given line
+    [m] add tutorial next,prev links, w/titles to footer
+    [m] add tutorial index (expandy) to sidebar
     [?] expand/close icon on preview header
     [] expand/close icon on error header
-    [] run/edit rocker switch logic
-        [x] basic logic
-        [x] rocker image
-        [] run when edited logic (alert w/Save/Go Back)
-        [] pop-out preview into own window (and leave there)
-    [] line number alignment on Chrome and FF
-    [] handling multiple error messages on a given line
-    [x] push top save/cancel buttons to top right of title
-    [] keep rendering preview closed first time (revive preview arg)
-    [] add tutorial next,prev links, w/titles to footer
-    [] add tutorial index (expandy) to sidebar
+    [] pop-out preview into own window (and leave there)
     
 Compilation
     [+m] better module loading... 
@@ -79,10 +82,10 @@ Project View
 
 Misc
     [] review and fix dependency versions in barley.cabal
-    [x] efficiently handling static content
-        [x] add Last-Modified headers to static content
-        [x] add Expires: <data> & Cache-Control: max-age=<secs>  headers
-        [x] process If-Modified-Since, If-Unmodified-Since
+    [+] efficiently handling static content
+        [+] add Last-Modified headers to static content
+        [+] add Expires: <data> & Cache-Control: max-age=<secs>  headers
+        [+] process If-Modified-Since, If-Unmodified-Since
     [] add Cache-Control: no-cache for dynamic content
 
 --- Tasks ----
